--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,22 @@
-Footer
+<footer class="footer">
+  <div class="footer-content">
+    <div class="footer-left">
+      <h4>Help spread the word</h4>
+      <ul class="footer-social">
+        <li class="twitter"><a href="https://twitter.com/intent/tweet/?text=The%20Open%20Source%20Survey%3A%20help%20identify%20priorities%20and%20challenges%20of%20the%20open-source%20community%20in%202020%20http%3A%2F%2Fopensourcesurvey.io%20%23opensourcesurvey%20%23opensource" target="_blank" aria-label="Twitter" rel="noopener noreferrer"><img src="{{ "/assets/images/twitter.svg" | relative_url }}" alt=""></a></li>
+        <li class="facebook"><a href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fopensourcesurvey.io" target="_blank" aria-label="Facebook" rel="noopener noreferrer"><img src="{{ "/assets/images/facebook.svg" | relative_url }}" alt=""></a></li>
+        <li class="email"><a href="mailto:?subject=The%20Open%20Source%20Survey&body=Help%20identify%20priorities%20and%20challenges%20of%20the%20open-source%20community%20in%202020%20http%3A%2F%2Fopensourcesurvey.io" aria-label="Email" rel="noopener noreferrer"><img src="{{ "/assets/images/mail.svg" | relative_url }}" alt=""></a></li>
+        <li class="github"><a href="https://github.com/opensourcesurvey/opensourcesurvey.io" target="_blank" aria-label="GitHub" rel="noopener noreferrer"><img src="{{ "/assets/images/github.svg" | relative_url }}" alt=""></a></li>
+      </ul>
+    </div>
+
+    <div class="footer-right">
+      <h4>FOSS used on this projects</h4>
+      <ul class="footer-acknowledgments">
+        <li>Site built with <a href="https://github.com/jekyll/jekyll" target="_blank">Jekyll</a></li>
+        <li>"Humans" illustration by <a href="https://www.humaaans.com/" target="_blank">Pablo Stanley</a></li>
+        <li>Feather icons by <a href="https://github.com/feathericons/feather" target="_blank">Cole Bemis</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
