--- a/_sass/sections/_survey.scss
+++ b/_sass/sections/_survey.scss
@@ -1,9 +1,10 @@
 .survey-title {
   text-align: center;
 
+  h1,
   p {
     max-width: 30rem;
-    margin: 1rem auto 0;
+    margin: 1rem auto;
   }
 }
 
