Force footer to stick to bottom of the page

--- a/_sass/global/_base.scss
+++ b/_sass/global/_base.scss
@@ -15,10 +15,16 @@ body {
   color: $black;
   font-size: 1.125rem;
   background-color: $gray-light;
+  display: flex;
+  flex-direction: column;
 
   &.show {
     overflow: hidden;
   }
+}
+
+main {
+  flex-grow: 1;
 }
 
 h1,
