Fix survey input text styles

--- a/_sass/sections/_survey.scss
+++ b/_sass/sections/_survey.scss
@@ -49,6 +49,7 @@
 
     input[type='text'],
     input[type='email'] {
+      appearance: none;
       position: relative;
       display: block;
       width: 100%;
