--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="{{ "/assets/images/favicon.png" | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/styles.css" | relative_url }}">
-    <title>{{ page.meta_title | default:  'Open Source Survey' }}</title>
-    <meta name="description" content="{{ page.meta_description | default: 'Open Source Survey' }}">
+    <title>{{ page.meta_title | default:  'The Open Source Survey' }}</title>
+    <meta name="description" content="{{ page.meta_description | default: site.description }}">
 </head>
