Add noopener rel to external links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,9 +13,9 @@
     <div class="footer-right">
       <h4>FOSS used on this projects</h4>
       <ul class="footer-acknowledgments">
-        <li>Site built with <a href="https://github.com/jekyll/jekyll" target="_blank">Jekyll</a></li>
-        <li>"Humans" illustration by <a href="https://www.humaaans.com/" target="_blank">Pablo Stanley</a></li>
-        <li>Feather icons by <a href="https://github.com/feathericons/feather" target="_blank">Cole Bemis</a></li>
+        <li>Site built with <a href="https://github.com/jekyll/jekyll" target="_blank" rel="noopener noreferrer">Jekyll</a></li>
+        <li>"Humans" illustration by <a href="https://www.humaaans.com/" target="_blank" rel="noopener noreferrer">Pablo Stanley</a></li>
+        <li>Feather icons by <a href="https://github.com/feathericons/feather" target="_blank" rel="noopener noreferrer">Cole Bemis</a></li>
       </ul>
     </div>
   </div>
