Add social sharing meta tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="shortcut icon" type="image/png" href="{{ "/assets/images/favicon.png" | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/css/styles.css" | relative_url }}">
+
     <title>{{ page.meta_title | default:  'The Open Source Survey' }}</title>
     <meta name="description" content="{{ page.meta_description | default: site.description }}">
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="{{ site.twitter_handle }}" />
+    <meta name="twitter:title" content="{{ page.meta_title | default:  'The Open Source Survey' }}" />
+    <meta name="twitter:description" content="{{ page.meta_description | default: site.description }}" />
+    <meta name="twitter:image" content="{{ "/assets/images/social-banner.png" | absolute_url }}" />
+
+    <meta property="og:url" content="{{ page.url | absolute_url }}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="{{ page.meta_title | default:  'The Open Source Survey' }}" />
+    <meta property="og:description" content="{{ page.meta_description | default: site.description }}" />
+    <meta property="og:image" content="{{ "/assets/images/social-banner.png" | absolute_url }}" />
 </head>
