Use large image summary twitter card

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
     <title>{{ page.meta_title | default:  'The Open Source Survey' }}</title>
     <meta name="description" content="{{ page.meta_description | default: site.description }}">
 
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="{{ site.twitter_handle }}" />
     <meta name="twitter:title" content="{{ page.meta_title | default:  'The Open Source Survey' }}" />
     <meta name="twitter:description" content="{{ page.meta_description | default: site.description }}" />
