Add raffle info

--- a/_sass/sections/_hero.scss
+++ b/_sass/sections/_hero.scss
@@ -75,4 +75,11 @@
       margin-bottom: 1rem;
     }
   }
+
+  .raffle {
+    padding: 1rem 1.5rem;
+    margin-bottom: 2rem;
+    border: 2px solid $white;
+    max-width: 490px;
+  }
 }
